# HTF

./: .gitignore  .travis.yml  ChangeLog  DarcsPatchInfo.hs  HTF.cabal  HTF.h  HTFPP.hs  Makefile  README  README.md  Setup.hs  TODO  TODO.org  boring  check-dist.sh  dist.sh  run-all-tests-for-all-compilers.sh  run-all-tests.sh  setup.hs  stack-ghc-7.10.yaml  stack-ghc-8.0.yaml  stack-ghc-8.10.yaml  stack-ghc-8.2.yaml  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml  stack-ghc-8.8.yaml  stack-ghc-9.0.yaml  stack-ghc-9.2.yaml  stack-ghc-9.4.yaml  stack-ghc-9.6.yaml  stack-nightly.yaml  stack.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: haskell-ci.yml
Test/: Framework.hs
Test/Framework/: AssertM.hs  BlackBoxTest.hs  CmdlineOptions.hs  Colors.hs  Configuration.hs  Diff.hs  FileBasedTest.hs  HUnitWrapper.hs  HaskellParser.hs  History.hs  JsonOutput.hs  Location.hs  Preprocessor.hs  Pretty.hs  PrettyHaskell.hs  Process.hs  QuickCheckWrapper.hs  Reporting.hs  Syntax.hs  TestConfig.hs  TestInterface.hs  TestManager.hs  TestManagerInternal.hs  TestManagerInternal.hs-boot  TestReporter.hs  TestTypes.hs  ThreadPool.hs  Tutorial.hs  Utils.hs  XmlOutput.hs
doc/blog-posts/: version-0.8.1.0.html
doc/hcar/: htf.tex
sample/: LICENSE  Main.hs  README  TestMain.hs  sample-HTF.cabal
sample/MyPkg/: A.hs  B.hs  C.hs
sample/bbt-dir/should-pass/: x.out
scripts/: HTFghc  HTFghci  HTFpp.hs  Process.hs  check.sh  ci-check  dist.sh  htf-ghc  htf-ghci  local-htfpp  prepare  run-sample  travis-check
tests/: Makefile  MiscTest.hs  Quasi.hs  TestHTF.hs  TestHTFHunitBackwardsCompatible.hs  TestUnitTests.hs  ThreadPoolTest.hs  Tutorial.hs  run-bbt.sh  run-fbt.sh  run-tests.sh  test-HTF.cabal
tests/Foo/: A.hs  B.hs  test.h
tests/bbt/Verbose/: BBTArgs
tests/compile-errors/: Foo.h  Makefile  Test1.hs  Test2.hs  Test3.hs  Test4.hs  run-tests.sh
tests/fbt/Skip/: FBTConfig
tests/jp/: HTF-diff3069.txt  HTF-diff6472.txt  HTF-diff6473.txt  HTF-diff6783.txt
tests/real-bbt/: FailFast.hs  FailFast.sh  MaxCurTime.hs  MaxCurTime.sh  MaxPrevTime.hs  MaxPrevTime.sh  PrevFactor.hs  PrevFactor.sh  Repeat.hs  Repeat.sh  SortByPrevTime.hs  SortByPrevTime.sh  UniqTests.sh  UniqTests1.hs  UniqTests2.hs  lib
