Name:             HTF
Version:          0.9.0.0
License:          LGPL
License-File:     LICENSE
Copyright:        (c) 2005-2012 Stefan Wehr
Author:           Stefan Wehr <mail@stefanwehr.de>
Maintainer:       Stefan Wehr <mail@stefanwehr.de>
Bug-Reports:      mailto:mail@stefanwehr.de
Stability:        Beta
Category:         Testing
Synopsis:         The Haskell Test Framework
Description:

    The Haskell Test Framework (/HTF/ for short) lets you define unit
    tests (<http://hunit.sourceforge.net>), QuickCheck properties
    (<http://www.cs.chalmers.se/~rjmh/QuickCheck/>), and black box
    tests in an easy and convenient way. HTF uses a custom
    preprocessor that collects test definitions automatically.
    Furthermore, the preprocessor allows HTF to report failing
    test cases with exact file name and line number information.
    Additionally, HTF tries to produce highly readable output
    for failing tests: for example, it colors and pretty prints expected and
    actual results and provides a diff between the two values.

    .

    The documentation of the "Test.Framework.Tutorial" module
    provides a tutorial for HTF. There is also a slightly out-dated
    blog article (<http://factisresearch.blogspot.de/2011/10/new-version-of-htf-with-diffs-colors.html>)
    demonstrating HTF's coloring, pretty-printing and diff functionality.

    .

    /HEADS UP, backwards incomatibility with prior versions:/

    .
    Starting with version 0.9.0.0, HTF uses a new strategy
    for collecting the testcases defined in your project
    (see "Test.Framework.Tutorial" for a description of this strategy).
    If you used version 0.8.* or earlier of HTF, this /will break your build!/
    However, it's rather easy to bring you project in line with the new HTF
    version. Here are the steps that will most likely resolve
    your backwards incompatibility problems:

    .

    * If a module exports the @allHTFTests@ symbol, this export must
      be changed to @htf_thisModulesTests@.

    .

    * If an import declaration of some module hides the @allHTFTests@
      symbol, you can simply remove the hiding clause for @allHTFTests@.

    .

    * If a module collects and executes tests from several other modules,
      the collecting module has to be changed as follows: add
      @&#x7b;-&#x23; OPTIONS_GHC -F -pgmF htfpp &#x23;-&#x7d;@ to the top
      of the collecting module, import
      the other modules with the @&#x7b;-&#x40; HTF_TESTS &#x40;-&#x7d;@
      annotation, use the symbol @htf_importedTests@ for referencing
      the imported tests. See "Test.Framework.Tutorial" for details.

Tested-With:      GHC==7.0.4, GHC==7.2.1, GHC==7.4.1, GHC==7.4.2, GHC==7.6.1
Build-Type:       Simple
Cabal-Version:    >= 1.6
Extra-Source-Files:
  README.md
  TODO.org
  ChangeLog

Source-Repository head
  Type:           git
  Location:       git://github.com/skogsbaer/HTF.git

Executable htfpp
  Main-Is:          HTFPP.hs
  Build-Depends:    cpphs >= 1.12,
                    haskell-src-exts >= 1.11 && < 1.14,
                    base == 4.*
  Other-Modules:
    Test.Framework.Preprocessor
    Test.Framework.HaskellParser

Library
  Build-Depends:    HUnit == 1.2.*,
                    QuickCheck >= 2.3 && < 2.6,
                    base == 4.*,
                    random == 1.0.*,
                    containers >= 0.3 && < 0.6,
                    process >= 1.0 && < 1.2,
                    directory >= 1.0 && < 1.3,
                    mtl >= 1.1 && < 2.2,
                    pretty >= 1.0 && < 1.2,
                    Diff >= 0.1.3 && < 0.2,
                    unix >= 2.4 && < 2.7,
                    bytestring >= 0.9 && < 0.11,
                    regex-compat >= 0.92 && < 0.96,
                    haskell-src-exts >= 1.11 && < 1.14
  Exposed-Modules:
    Test.Framework
    Test.Framework.HUnitWrapper
    Test.Framework.TestManager
    Test.Framework.QuickCheckWrapper
    Test.Framework.BlackBoxTest
    Test.Framework.Location
    Test.Framework.Tutorial
    Test.Framework.Pretty
  Other-Modules:
    Test.Framework.TestManagerInternal
    Test.Framework.Utils
    Test.Framework.Colors
    Test.Framework.Diff
    Test.Framework.Process
    Test.Framework.TestConfig
