Name:          test-HTF
Version:       0.1
Cabal-Version: >= 1.10
Build-type:    Simple

Executable test
  Main-is: TestHTF.hs
  Build-depends:     base >= 4,
                     HTF >= 0.11,
                     bytestring >= 0.9,
                     aeson >= 0.6,
                     unordered-containers >= 0.2,
                     temporary >= 1.1,
                     text >= 0.11,
                     directory >= 1.0,
                     filepath >= 1.1,
                     process >= 1.0,
                     regex-compat >= 0.92
  Default-language:  Haskell2010
  Ghc-options: -threaded

Test-Suite tutorial
  Type:              exitcode-stdio-1.0
  Main-is:           Tutorial.hs
  Build-depends:     base >= 4, HTF == 0.10.*
  Default-language:  Haskell2010
